--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="content">
                 <h3>WANUWA DESIGN STUDIO</h3>
                 <p>Designing the future</p>
-                <a href="#projects" class="btn">Our Projects</a>
+                <a href="" class="btn">Contact Us</a>
             </div>
         </div>
     </section>
@@ -165,7 +165,7 @@
     <footer>
         <div class="footer-content">
             <h3>WANUWA DESIGN STUDIO</h3>
-            <p>Designing the future</p>
+            <p>Say Your Idea & Create Own Design from Us</p>
             <ul class="socials">
                 <li><a href="#"><i class='bx bxl-facebook'></i></a></li>
                 <li><a href="#"><i class='bx bxl-tiktok'></i></a></li>
