--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WANUWA Design Studio</title>
+    <title>Wanuwa Design Studio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -36,8 +36,8 @@
     <main>
         <section id="home" class="parallax">
             <div class="parallax-content">
-                <h1>WANUWA Design Studio</h1>
-                <p>Crafting Digital Experiences</p>
+                <h1>WANUWA DESIGN STUDIO</h1>
+                <p>"Say Your Idea & Create Own Design From Us"</p>
                 <a href="#contact" class="cta-button">Get Started</a>
             </div>
         </section>
@@ -194,7 +194,7 @@
               <h2 class="section-title">Get in Touch</h2>
               <div class="contact-wrapper">
                 <div class="contact-form">
-                  <form>
+                  <form id="contact-form">
                     <div class="form-group">
                       <input type="text" id="name" name="name" required>
                       <label for="name">Your Name</label>
@@ -257,8 +257,8 @@
         <div class="container">
           <div class="footer-content">
             <div class="footer-logo">
-              <h2>WANUWA</h2>
-              <p>Crafting Digital Experiences</p>
+              <h2>WANUWA DESIGN STUDIO</h2>
+              <p>"Say Your Idea & Create Own Design From Us"</p>
             </div>
             <div class="footer-links">
               <h3>Quick Links</h3>
@@ -278,7 +278,7 @@
                     <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path>
                   </svg>
                 </a>
-                <a href="#" aria-label="Twitter">
+                <a href="#" aria-label="Tiktok">
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                     <path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"></path>
                   </svg>
@@ -308,6 +308,6 @@
 
     </main>
 
-    <script src="script.js"></script>
+    <script src="contact-form.js"></script>
 </body>
 </html>
